Title: Integrated Eureka Client and Updated Inventory Check Logic
Details:
- Integrated Eureka Client in ProductService, OrderService, and InventoryService applications.
- Updated the logic in OrderService to check the inventory for all products in an order before saving the order.
- Added a new configuration for DiscoveryService in the launch.json file.
- Updated the InventoryService to return a list of InventoryResponse objects instead of a boolean.
- Updated the InventoryController to accept a list of skuCodes as a request parameter.
- Updated the InventoryRepository to find all inventories by a list of skuCodes.
- Added spring-cloud-starter-netflix-eureka-client dependency in the pom.xml files of ProductService, OrderService, and InventoryService.
- Changed the import statements in Order, OrderLineItems, and Inventory model classes from jakarta.persistence to javax.persistence.
- Updated the application.properties files of OrderService, InventoryService, and ProductService to include Eureka client configuration.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,13 +2,6 @@
   "configurations": [
     {
       "type": "java",
-      "name": "ProductServiceApplication",
-      "request": "launch",
-      "mainClass": "comalicalli.productservice.ProductServiceApplication",
-      "projectName": ""
-    },
-    {
-      "type": "java",
       "name": "Spring Boot-ProductServiceApplication<product-service>",
       "request": "launch",
       "cwd": "${workspaceFolder}",
@@ -25,7 +18,8 @@
       "mainClass": "com.alicalli.orderservice.OrderServiceApplication",
       "projectName": "order-service",
       "args": "",
-      "envFile": "${workspaceFolder}/.env"
+      "envFile": "${workspaceFolder}/.env",
+      "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=52538 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=order-service"
     },
     {
       "type": "java",
@@ -35,7 +29,29 @@
       "mainClass": "com.alicalli.inventoryservice.InventoryServiceApplication",
       "projectName": "inventory-service",
       "args": "",
+      "envFile": "${workspaceFolder}/.env",
+      "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=52564 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=inventory-service"
+    },
+    {
+      "type": "java",
+      "name": "Spring Boot-DiscoveryService<discovery-server>",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "mainClass": "com.alicalli.discoveryserver.DiscoveryServerApplication",
+      "projectName": "discovery-server",
+      "args": "",
       "envFile": "${workspaceFolder}/.env"
+    },
+    {
+      "type": "java",
+      "name": "InventoryServiceApplication<inventory-service>",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "mainClass": "com.alicalli.inventoryservice.InventoryServiceApplication",
+      "projectName": "inventory-service",
+      "args": "",
+      "envFile": "${workspaceFolder}/.env",
+      "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.-Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=inventory-service"
     }
   ]
 }
