--- a/microservices/inventory-service/src/main/resources/application.properties
+++ b/microservices/inventory-service/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/inventory-service
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
-server.port=8082
+server.port=0
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
