--- a/microservices/order-service/src/main/resources/application.properties
+++ b/microservices/order-service/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8081
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
