--- a/microservices/api-gateway/src/main/resources/application.properties
+++ b/microservices/api-gateway/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
 ## Order Service Route
 spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=lb://order-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/product
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order
 
 
 ## Discover Server Route
@@ -32,3 +32,6 @@ spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservices-realm
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
